[wcag] Fix contrast on date labels

--- a/ckanext/versioned_datastore/theme/fanstatic/css/datastore-activities.css
+++ b/ckanext/versioned_datastore/theme/fanstatic/css/datastore-activities.css
@@ -44,3 +44,7 @@
 .activity .collapseDetails .detailsTable td {
     padding-left: 12px;
 }
+
+.activity .item .date {
+    color: #656565;
+}
